# bottlerocket

./: .gitignore  BUILDING.md  CHANGELOG.md  Dockerfile  Makefile.toml  PUBLISHING-AWS.md  PUBLISHING.md  QUICKSTART-EKS.md  README.md  TESTING.md
sources/: Cargo.toml
sources/api/apiclient/: README.md  README.tpl
sources/models/shared-defaults/: defaults.toml
tools/: partyplanner  rpm2img
tools/buildsys/src/: manifest.rs
tools/testsys/src/: aws_resources.rs
variants/: Cargo.toml
variants/aws-ecs-1-1gb/: Cargo.toml
