[package]
name = "aws-ecs-1-1gb"
version = "0.1.0"
edition = "2018"
publish = false
build = "build.rs"

[package.metadata.build-variant]
kernel-parameters = [
    "console=tty0",
    "console=ttyS0,115200n8",
    "net.ifnames=0",
    "netdog.default-interface=eth0:dhcp4,dhcp6?",
    "quiet",
]
included-packages = [
# core
    "release",
    "kernel-5.10",
# docker
    "docker-cli",
    "docker-engine",
    "docker-init",
    "docker-proxy",
# ecs
    "ecs-agent",
]
supported-arches = ["aarch64"] # This is added compared to aws-ecs-1

[lib]
path = "lib.rs"

[build-dependencies]
# core
release = { path = "../../packages/release" }
kernel-5_10 = { path = "../../packages/kernel-5.10" }
# docker
docker-cli = { path = "../../packages/docker-cli" }
docker-engine = { path = "../../packages/docker-engine" }
docker-init = { path = "../../packages/docker-init" }
docker-proxy = { path = "../../packages/docker-proxy" }
# ecs
ecs-agent = { path = "../../packages/ecs-agent" }

# This is added compared to aws-ecs-1:
[package.metadata.build-variant.image-layout]
os-image-size-gib = 1
data-image-size-gib = 1
partition-plan = "split"
